[gd_scene load_steps=10 format=3 uid="uid://dd23pw1dsk6h7"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_ualyb"]
[ext_resource type="TileSet" uid="uid://d2qu48x6jo5ct" path="res://assets/stocktileset.tres" id="2_5p5cl"]
[ext_resource type="PackedScene" uid="uid://w1s27c56uj17" path="res://scenes/player.tscn" id="4_v1e4b"]
[ext_resource type="TileSet" uid="uid://cjmqnbe00wi4n" path="res://scenes/structures.tres" id="5_1fnhg"]
[ext_resource type="PackedScene" uid="uid://bldfq5a4h5d5" path="res://scenes/enemy.tscn" id="5_sfi6o"]
[ext_resource type="PackedScene" uid="uid://cq4pvn6lc4vw" path="res://scenes/enemy2.tscn" id="6_t420j"]

[sub_resource type="GDScript" id="GDScript_2e00v"]
script/source = "extends Area2D
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jfl2n"]
size = Vector2(57, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eo2fy"]
size = Vector2(26, 39)

[node name="world" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ualyb")

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
y_sort_enabled = true
tile_set = ExtResource("2_5p5cl")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(-262161, 1, 0, -196625, 131072, 0, -131089, 131072, 1, -65553, 131072, 2, -17, 1, 0, 65519, 1, 0, 131055, 1, 0, 196591, 1, 0, 262127, 1, 0, 327663, 1, 0, 393199, 1, 0, 458735, 1, 0, 524271, 1, 0, 524272, 1, 0, 524273, 1, 0, 524274, 1, 0, 524275, 1, 0, 524276, 1, 0, 524277, 1, 0, 524278, 1, 0, 524279, 1, 0, 524280, 1, 0, 524281, 1, 0, 524282, 1, 0, 524283, 1, 0, 524284, 1, 0, 524285, 1, 0, 524286, 1, 0, 524287, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 65536, 2, 458759, 327680, 0, 458760, 262144, 1, 458761, 131072, 0, 458762, 131072, 0, 458763, 131072, 0, 458764, 327680, 1, 458765, 131072, 1, 458766, 131072, 1, 458767, 131072, 1, 458768, 131072, 1, 393232, 327680, 1, 393233, 262144, 0, 458769, 196608, 1, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 458773, 1, 0, 393237, 1, 0, 327701, 131072, 2, 262165, 131072, 1, 196629, 131072, 0, 131093, 1, 0, 65557, 1, 0, 21, 1, 0, -65515, 1, 0, -131051, 1, 0, -196587, 1, 0, -262123, 1, 0, -327659, 1, 0, -393195, 1, 0, -458731, 1, 0, -524267, 1, 0, -589803, 1, 0, -655339, 1, 0, -720875, 1, 0, -720876, 1, 0, -720877, 1, 0, -720878, 1, 0, -720879, 1, 0, -720880, 1, 0, -720881, 1, 0, -720882, 1, 0, -720883, 1, 0, -720884, 1, 0, -720885, 1, 0, -720886, 1, 0, -720887, 1, 0, -720888, 1, 0, -720889, 1, 0, -720890, 1, 0, -786426, 1, 0, -786427, 1, 0, -786428, 1, 0, -786429, 1, 0, -786430, 1, 0, -786431, 1, 0, -786432, 1, 0, -720897, 1, 0, -720898, 1, 0, -720899, 1, 0, -720900, 196608, 0, -720901, 131072, 0, -720902, 131072, 0, -720903, 65536, 0, -720904, 1, 0, -720905, 1, 0, -720906, 1, 0, -655370, 1, 0, -655371, 1, 0, -655372, 1, 0, -655373, 1, 0, -655374, 1, 0, -655375, 1, 0, -655376, 1, 0, -655377, 1, 0, -720913, 1, 0, -720912, 1, 0, -720911, 1, 0, -720910, 1, 0, -720909, 1, 0, -720908, 1, 0, -720907, 1, 0, -589841, 1, 0, -524305, 1, 0, -458769, 1, 0, -393233, 1, 0, -327697, 1, 0, -393232, 1, 0, -458768, 1, 0, -524304, 1, 0, -524303, 1, 0, -589839, 1, 0, -655369, 1, 0, -655368, 1, 0, -655367, 65536, 2, -655366, 327680, 0, -655365, 131072, 1, -655364, 196608, 1, -655363, 1, 0, -655362, 1, 0, -655361, 1, 0, -720896, 1, 0, -786425, 1, 0, -786424, 1, 0, -786423, 1, 0, -786422, 1, 0, -786421, 1, 0, -786420, 1, 0, -786419, 1, 0, -786418, 1, 0, -786417, 1, 0, -786416, 1, 0, -786415, 1, 0, -786414, 1, 0, -786413, 1, 0, -786412, 1, 0, -786411, 1, 0, -655341, 1, 0, -655342, 1, 0, -655343, 1, 0, -655344, 1, 0, -655345, 1, 0, -655346, 1, 0, -655347, 1, 0, -655348, 1, 0, -655349, 1, 0, -655350, 1, 0, -655351, 1, 0, -655352, 1, 0, -655353, 1, 0, -655354, 1, 0, -655355, 1, 0, -655356, 1, 0, -655357, 1, 0, -720893, 1, 0, -720894, 1, 0, -720895, 1, 0, -720892, 1, 0, -720891, 1, 0, -655358, 1, 0, -655359, 1, 0, -655360, 1, 0, -589825, 1, 0, -589826, 1, 0, -524290, 1, 0, -524291, 1, 0, -524292, 1, 0, -524295, 1, 0, -524296, 1, 0, -524297, 1, 0, -524298, 1, 0, -524299, 1, 0, -524300, 1, 0, -524301, 1, 0, -524302, 1, 0, -589840, 1, 0, -589838, 1, 0, -589837, 1, 0, -589836, 1, 0, -589835, 1, 0, -589834, 1, 0, -589833, 1, 0, -589832, 1, 0, -589831, 1, 0, -589830, 65536, 1, -589829, 262144, 0, -589828, 196608, 2, -589827, 1, 0, -655340, 1, 0, -589804, 1, 0, -524268, 1, 0, -458732, 1, 0, -393196, 1, 0, -327660, 1, 0, -262124, 1, 0, -196588, 1, 0, -131052, 1, 0, -65516, 1, 0, 20, 1, 0, 65556, 1, 0, 131092, 1, 0, 196628, 131072, 0, 262164, 131072, 1, 327700, 131072, 2, 393236, 1, 0, 393235, 1, 0, 393231, 131072, 0, 393230, 131072, 0, 393229, 131072, 0, 393228, 65536, 0, 393227, 1, 0, 393226, 1, 0, 393225, 1, 0, 393224, 196608, 1, 393223, 131072, 1, 393222, 65536, 1, 393221, 1, 0, 393220, 1, 0, 393219, 1, 0, 393218, 1, 0, 393217, 1, 0, 393216, 1, 0, 458751, 1, 0, 458750, 1, 0, 458749, 1, 0, 458748, 1, 0, 458747, 1, 0, 458746, 1, 0, 458745, 1, 0, 458744, 1, 0, 458743, 1, 0, 458742, 1, 0, 458741, 1, 0, 458740, 1, 0, 458739, 1, 0, 458738, 1, 0, 458737, 1, 0, 458736, 1, 0, 393200, 1, 0, 327664, 1, 0, 262128, 1, 0, 196592, 1, 0, 131056, 1, 0, 65520, 1, 0, 65521, 1, 0, -15, 1, 0, -65551, 131072, 2, -131087, 131072, 1, -196623, 327680, 1, -262159, 65536, 0, -327695, 1, 0, -327696, 1, 0, -393231, 1, 0, -458767, 1, 0, -262160, 1, 0, -196624, 131072, 0, -131088, 131072, 1, -65552, 131072, 2, -16, 1, 0, 327665, 1, 0, 393201, 1, 0, 262129, 1, 0, 196593, 1, 0, 131057, 1, 0, 196594, 1, 0, 262130, 1, 0, 327666, 1, 0, 393202, 1, 0, 131058, 1, 0, 65522, 1, 0, -14, 1, 0, -65550, 196608, 2, -131086, 262144, 0, -196622, 131072, 1, -262158, 131072, 0, -327694, 1, 0, -393230, 1, 0, -458766, 1, 0, -458765, 1, 0, -458764, 1, 0, -393228, 1, 0, -393229, 1, 0, -327693, 1, 0, -262157, 131072, 0, -196621, 131072, 1, -131085, 131072, 2, -65549, 1, 0, -13, 1, 0, 65523, 1, 0, 131059, 1, 0, 196595, 1, 0, 262131, 1, 0, 327667, 1, 0, 393203, 1, 0, 393204, 1, 0, 327668, 1, 0, 262132, 1, 0, 196596, 1, 0, 131060, 1, 0, 65524, 1, 0, -12, 1, 0, -65548, 1, 0, -131084, 196608, 2, -196620, 262144, 0, -262156, 327680, 1, -262155, 131072, 1, -327691, 327680, 1, -393227, 65536, 0, -458763, 1, 0, -196619, 131072, 2, -131083, 1, 0, -65547, 1, 0, -11, 1, 0, 393205, 1, 0, 327669, 1, 0, 262133, 1, 0, 196597, 1, 0, 131061, 1, 0, 65525, 1, 0, -327692, 65536, 0, -393226, 131072, 0, -393225, 131072, 0, -458761, 1, 0, -458760, 1, 0, -458759, 1, 0, -458756, 1, 0, -458755, 1, 0, -458754, 1, 0, -458753, 1, 0, -524288, 1, 0, -524287, 1, 0, -524286, 1, 0, -524285, 1, 0, -524284, 1, 0, -524283, 1, 0, -524282, 1, 0, -524281, 1, 0, -524280, 1, 0, -524279, 1, 0, -524278, 1, 0, -524277, 1, 0, -524276, 1, 0, -589812, 1, 0, -589811, 1, 0, -589810, 1, 0, -589809, 1, 0, -589808, 1, 0, -524272, 1, 0, -458737, 1, 0, -458738, 1, 0, -458739, 1, 0, -393204, 1, 0, -393205, 1, 0, -393206, 1, 0, -393207, 1, 0, -393208, 1, 0, -393209, 1, 0, -327674, 1, 0, -327675, 1, 0, -327676, 1, 0, -327677, 1, 0, -262142, 1, 0, -262143, 196608, 1, -262144, 131072, 1, -196609, 131072, 1, -131078, 131072, 1, -131079, 131072, 1, -131080, 65536, 1, -131077, 131072, 1, -131076, 131072, 1, -131075, 131072, 1, -131074, 131072, 1, -131073, 131072, 1, -196608, 131072, 1, -196607, 196608, 1, -196606, 1, 0, -196605, 1, 0, -196604, 1, 0, -196603, 1, 0, -196602, 1, 0, -196601, 1, 0, -65538, 131072, 2, -65537, 327680, 0, -131072, 131072, 1, -131071, 196608, 1, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -131067, 1, 0, -131066, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 1, 0, -131062, 1, 0, -131061, 1, 0, -131060, 1, 0, -131059, 1, 0, -131058, 1, 0, -131057, 1, 0, -131056, 1, 0, -65520, 1, 0, -65521, 1, 0, -65522, 1, 0, -65523, 1, 0, -65524, 1, 0, -65525, 1, 0, -65526, 1, 0, -65527, 1, 0, -65528, 1, 0, -65529, 1, 0, -65530, 1, 0, -65531, 1, 0, -65532, 1, 0, -65533, 1, 0, -65534, 1, 0, -65535, 196608, 1, -65536, 131072, 1, -1, 65536, 1, -2, 1, 0, -3, 1, 0, -4, 1, 0, -5, 1, 0, -6, 1, 0, -7, 1, 0, -8, 1, 0, -9, 1, 0, -10, 1, 0, 2, 196608, 0, 1, 262144, 1, 0, 131072, 1, 65535, 65536, 1, 65534, 1, 0, 65533, 1, 0, 65532, 1, 0, 65531, 1, 0, 65530, 1, 0, 65529, 1, 0, 65528, 1, 0, 65527, 1, 0, 65526, 1, 0, 131062, 1, 0, 131063, 1, 0, 131064, 1, 0, 131065, 1, 0, 131066, 1, 0, 131067, 1, 0, 131068, 1, 0, 131069, 1, 0, 131070, 1, 0, 131071, 65536, 1, 65536, 131072, 1, 65537, 131072, 1, 65538, 262144, 1, 65539, 131072, 0, 65540, 131072, 0, 65541, 131072, 0, 65542, 131072, 0, 65543, 196608, 0, 65544, 1, 0, 65545, 1, 0, 131082, 1, 0, 131081, 1, 0, 131080, 1, 0, 131079, 196608, 1, 131078, 131072, 1, 131077, 131072, 1, 131076, 131072, 1, 131075, 131072, 1, 131074, 327680, 0, 196606, 1, 0, 196605, 1, 0, 196604, 1, 0, 196603, 1, 0, 262138, 1, 0, 262137, 1, 0, 262136, 1, 0, 262135, 1, 0, 262139, 1, 0, 262140, 1, 0, 262141, 1, 0, 262142, 1, 0, 196610, 65536, 2, 196611, 131072, 2, 196612, 131072, 2, 196613, 131072, 2, 196614, 327680, 0, 196615, 196608, 1, 262147, 1, 0, 262146, 1, 0, 262145, 1, 0, 262144, 1, 0, 393215, 1, 0, 393214, 1, 0, 393213, 1, 0, 393212, 1, 0, 393206, 1, 0, 393207, 1, 0, 393208, 1, 0, 393209, 1, 0, 393210, 1, 0, 393211, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 65536, 1, 327687, 131072, 1, 327688, 196608, 1, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 65536, 1, 327697, 131072, 1, 327698, 262144, 0, 327699, 131072, 2, 262163, 131072, 1, 262162, 131072, 1, 262161, 131072, 1, 262160, 65536, 1, 262159, 1, 0, 262158, 1, 0, 262157, 1, 0, 262156, 1, 0, 262155, 1, 0, 262154, 1, 0, 262153, 1, 0, 262152, 196608, 0, 262151, 262144, 1, 262149, 1, 0, 327679, 1, 0, 327678, 1, 0, 327677, 1, 0, 327676, 1, 0, 327675, 1, 0, 327674, 1, 0, 327673, 1, 0, 327672, 1, 0, 327671, 1, 0, 327670, 1, 0, 262134, 1, 0, 196598, 1, 0, 196599, 1, 0, 196600, 1, 0, 196601, 1, 0, 196602, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 196627, 131072, 0, 196626, 131072, 0, 196625, 131072, 0, 196624, 65536, 0, 196623, 1, 0, 196622, 1, 0, 196621, 1, 0, 196620, 1, 0, 196619, 1, 0, 196618, 1, 0, 196617, 1, 0, 196616, 1, 0, 131083, 1, 0, 131084, 1, 0, 65554, 1, 0, 65555, 1, 0, 65553, 1, 0, 65552, 1, 0, 65551, 1, 0, 65550, 1, 0, 65549, 1, 0, 19, 1, 0, 18, 1, 0, 17, 1, 0, 16, 1, 0, 15, 1, 0, 14, 1, 0, 13, 1, 0, 12, 1, 0, 11, 1, 0, 10, 1, 0, 9, 1, 0, 8, 1, 0, 7, 1, 0, 6, 1, 0, 5, 1, 0, 4, 1, 0, 3, 1, 0, -65539, 131072, 2, -65540, 131072, 2, -65541, 131072, 2, -65542, 131072, 2, -65543, 131072, 2, -65544, 65536, 2, -65545, 1, 0, -65546, 1, 0, -131082, 1, 0, -196618, 131072, 2, -262154, 131072, 1, -327690, 131072, 1, -458762, 1, 0, -393224, 196608, 0, -393223, 1, 0, -589824, 1, 0, -589823, 1, 0, -589822, 1, 0, -589821, 1, 0, -589820, 1, 0, -589819, 1, 0, -589818, 1, 0, -589817, 1, 0, -589816, 1, 0, -589815, 1, 0, -589814, 1, 0, -589813, 1, 0, -524289, 1, 0, -524271, 1, 0, -524273, 1, 0, -524274, 1, 0, -524275, 1, 0, -524270, 1, 0, -589806, 1, 0, -589805, 1, 0, -524269, 1, 0, -458733, 1, 0, -393197, 1, 0, -327661, 1, 0, -327662, 1, 0, -262126, 1, 0, -196590, 1, 0, -131054, 1, 0, -65518, 1, 0, -65517, 1, 0, -262125, 1, 0, -196589, 1, 0, -131053, 1, 0, -65519, 1, 0, -196592, 1, 0, -262128, 1, 0, -327664, 1, 0, -393200, 1, 0, -458736, 1, 0, -458735, 1, 0, -393199, 1, 0, -393198, 1, 0, -458734, 1, 0, -262127, 1, 0, -327663, 1, 0, -196591, 1, 0, -131055, 1, 0, -589807, 1, 0, -393201, 1, 0, -327665, 1, 0, -327666, 1, 0, -327667, 1, 0, -327668, 1, 0, -327669, 1, 0, -262133, 1, 0, -262134, 1, 0, -327670, 1, 0, -327671, 1, 0, -327672, 1, 0, -393203, 1, 0, -393202, 1, 0, -262131, 1, 0, -262130, 1, 0, -262129, 1, 0, -196596, 1, 0, -196595, 1, 0, -196594, 1, 0, -196593, 1, 0, -262135, 1, 0, -262132, 1, 0, -262136, 1, 0, -262137, 1, 0, -196597, 1, 0, -196598, 1, 0, -196599, 1, 0, -196600, 1, 0, -262138, 1, 0, -262139, 1, 0, -262140, 1, 0, -262141, 1, 0, -327673, 1, 0, -393210, 1, 0, -393211, 1, 0, -393212, 1, 0, -393213, 1, 0, -458747, 1, 0, -458746, 1, 0, -458745, 1, 0, -458744, 1, 0, -458743, 1, 0, -458742, 1, 0, -458741, 1, 0, -458748, 1, 0, -458749, 1, 0, -458750, 1, 0, -458751, 1, 0, -458752, 1, 0, -393217, 1, 0, -458740, 1, 0, -393214, 1, 0, -393215, 1, 0, -393216, 1, 0, -327681, 1, 0, -327682, 1, 0, -327683, 1, 0, -327684, 1, 0, -327678, 1, 0, -327679, 196608, 0, -262145, 131072, 0, -262146, 131072, 0, -196617, 131072, 2, -262151, 131072, 0, -262152, 262144, 1, -327688, 196608, 1, -327687, 1, 0, -393220, 1, 0, -327689, 131072, 1, -262153, 131072, 1, -131081, 1, 0, -393218, 1, 0, -393219, 1, 0, -720914, 1, 0, -720915, 1, 0, -720916, 1, 0, -720917, 1, 0, -655382, 1, 0, -262165, 65536, 2, -196629, 1, 0, -131093, 1, 0, -65557, 1, 0, -21, 1, 0, 65515, 1, 0, 65514, 1, 0, 131050, 1, 0, 196586, 1, 0, 262122, 1, 0, 327658, 1, 0, 393194, 1, 0, 458730, 1, 0, -22, 1, 0, -65558, 1, 0, -131094, 1, 0, -196630, 1, 0, -262166, 1, 0, 524266, 1, 0, 524267, 1, 0, 524268, 1, 0, 524269, 1, 0, 524270, 1, 0, 458731, 1, 0, 458732, 1, 0, 458733, 1, 0, 458734, 1, 0, 393198, 1, 0, 393197, 1, 0, 393196, 1, 0, 327660, 1, 0, 327659, 1, 0, 262123, 1, 0, 196587, 1, 0, 131051, 1, 0, -393237, 65536, 1, -458773, 65536, 0, -524309, 1, 0, -655381, 1, 0, -655380, 1, 0, -655379, 1, 0, -655378, 1, 0, -589842, 1, 0, -524306, 1, 0, -131090, 131072, 1, -65554, 131072, 2, -18, 1, 0, 65518, 1, 0, 131054, 1, 0, 131053, 1, 0, 196590, 1, 0, 262126, 1, 0, 327662, 1, 0, -196626, 262144, 1, -262162, 196608, 1, -327698, 196608, 1, -393234, 196608, 1, -524307, 1, 0, -524308, 1, 0, -458772, 131072, 0, -393236, 131072, 1, -393235, 131072, 1, -327699, 131072, 1, -262163, 131072, 1, -196627, 131072, 1, -131091, 327680, 0, -65555, 65536, 2, -19, 1, 0, 65516, 1, 0, 131052, 1, 0, 196588, 1, 0, 262124, 1, 0, 262125, 1, 0, 196589, 1, 0, 65517, 1, 0, 327661, 1, 0, -20, 1, 0, -65556, 1, 0, -131092, 65536, 2, -196628, 65536, 1, 524309, 1, 0, 589845, 1, 0, 655381, 1, 0, 655380, 1, 0, 720916, 1, 0, 720915, 1, 0, 720914, 1, 0, 720913, 1, 0, 720912, 1, 0, 720911, 1, 0, 720910, 1, 0, 720909, 1, 0, 720908, 1, 0, 720907, 1, 0, 720906, 1, 0, 720905, 1, 0, 720904, 1, 0, 720903, 1, 0, 720902, 1, 0, 720901, 1, 0, 720900, 1, 0, 720899, 1, 0, 720898, 1, 0, 720897, 1, 0, 720896, 1, 0, 786431, 1, 0, 786430, 1, 0, 786429, 1, 0, 786428, 1, 0, 786427, 1, 0, 786426, 1, 0, 786425, 1, 0, 786424, 1, 0, 786423, 1, 0, 720887, 1, 0, 720886, 1, 0, 720885, 1, 0, 720884, 1, 0, 720883, 1, 0, 720882, 1, 0, 720881, 1, 0, 720880, 1, 0, 720879, 1, 0, 720878, 1, 0, 720877, 1, 0, 720876, 1, 0, 720875, 1, 0, 720874, 1, 0, 786410, 1, 0, 786411, 1, 0, 786412, 1, 0, 786413, 1, 0, 786414, 1, 0, 786415, 1, 0, 786416, 1, 0, 786417, 1, 0, 786418, 1, 0, 786419, 1, 0, 786420, 1, 0, 786421, 1, 0, 786422, 1, 0, 655338, 1, 0, 589802, 1, 0, 655339, 1, 0, 589803, 1, 0, 589804, 1, 0, 589805, 1, 0, 655341, 1, 0, 655340, 1, 0, 589807, 1, 0, 589808, 1, 0, 589809, 1, 0, 589810, 1, 0, 589811, 1, 0, 589812, 1, 0, 589813, 1, 0, 589814, 1, 0, 589815, 1, 0, 589816, 1, 0, 589817, 1, 0, 589818, 1, 0, 589819, 1, 0, 589820, 1, 0, 589821, 1, 0, 589822, 1, 0, 589823, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 65536, 2, 524300, 131072, 2, 524307, 1, 0, 524308, 1, 0, 524306, 1, 0, 524304, 131072, 2, 524303, 131072, 2, 524302, 131072, 2, 524301, 131072, 2, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 655379, 1, 0, 655378, 1, 0, 655377, 1, 0, 655363, 1, 0, 655362, 1, 0, 655361, 1, 0, 655360, 1, 0, 720895, 1, 0, 720894, 1, 0, 720893, 1, 0, 720892, 1, 0, 720891, 1, 0, 720890, 1, 0, 720889, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 589841, 1, 0, 589840, 1, 0, 589839, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 655355, 1, 0, 655354, 1, 0, 655353, 1, 0, 655352, 1, 0, 655351, 1, 0, 655350, 1, 0, 655349, 1, 0, 655348, 1, 0, 655347, 1, 0, 655346, 1, 0, 655345, 1, 0, 655344, 1, 0, 655343, 1, 0, 655342, 1, 0, 655356, 1, 0, 655357, 1, 0, 655358, 1, 0, 655359, 1, 0, 720888, 1, 0, 720917, 1, 0, -196610, 131072, 1, -327680, 131072, 0, 524296, 131072, 2, 524297, 131072, 2, 524298, 131072, 2, 524299, 131072, 2, 393234, 196608, 2, 524305, 196608, 2, 262148, 1, 0, 262150, 65536, 1, -327685, 196608, 1, -393221, 196608, 1, -458757, 196608, 1, -524293, 196608, 1, -262150, 327680, 1, -327686, 65536, 1, -393222, 65536, 1, -458758, 65536, 1, -524294, 65536, 1, -196614, 131072, 1, -196615, 131072, 1, -196616, 327680, 0, -196611, 131072, 1, -196612, 131072, 1, -196613, 131072, 1, -262149, 262144, 1, -262148, 131072, 0, -262147, 131072, 0, 131073, 131072, 2, 131072, 131072, 2, 196607, 65536, 2, 196609, 1, 0, 196608, 1, 0, 262143, 1, 0, -327701, 65536, 1, -262164, 327680, 0, -327700, 131072, 1, -327702, 1, 0, -393238, 1, 0, -458774, 1, 0, -524310, 1, 0, -589846, 1, 0, -589843, 1, 0, -589844, 1, 0, -589845, 1, 0, -458771, 131072, 0, -458770, 196608, 0, -720918, 1, 0, 393195, 1, 0, 589806, 1, 0)
layer_1/name = "clliff"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-786411, 131072, 5, -786412, 131072, 5, -786413, 131072, 5, -786414, 131072, 5, -786415, 131072, 5, -786416, 131072, 5, -786417, 131072, 5, -786418, 131072, 5, -786419, 131072, 5, -720884, 262144, 4, -720885, 131072, 5, -720886, 131072, 5, -720887, 131072, 5, -720888, 131072, 5, -720889, 131072, 5, -720890, 131072, 5, -720891, 131072, 5, -720892, 131072, 5, -720875, 327680, 4, -720876, 131072, 6, -720877, 131072, 6, -720878, 131072, 6, -720879, 131072, 6, -720880, 131072, 6, -720881, 131072, 6, -720882, 131072, 6, -655349, 131072, 6, -655350, 131072, 6, -655351, 131072, 6, -655352, 131072, 6, -655353, 131072, 6, -655354, 131072, 6, -655355, 131072, 6, -786420, 131072, 5, -786421, 131072, 5, -786422, 131072, 5, -786423, 131072, 5, -786424, 131072, 5, -786425, 131072, 5, -786426, 131072, 5, -786427, 131072, 5, -786428, 131072, 5, -655356, 262144, 4, -655357, 131072, 5, -589822, 131072, 5, -589823, 131072, 5, -589821, 262144, 4, -786432, 131072, 5, -720896, 131072, 5, -655360, 327680, 4, -655361, 131072, 5, -655348, 196608, 6, -720883, 131072, 6, -589820, 196608, 6, -524285, 196608, 6, -524286, 131072, 6, -524287, 131072, 6, -589824, 65536, 5, -589825, 131072, 6, -589826, 131072, 6, -589827, 65536, 6, -655363, 65536, 5, -720899, 65536, 5, -720897, 131072, 5, -720898, 131072, 5, -655362, 131072, 5, -786431, 131072, 5, -786429, 131072, 5, -720893, 131072, 5, -720894, 131072, 5, -786430, 131072, 5, -720895, 131072, 5, -655359, 131072, 5, -655358, 131072, 5, 655340, 131072, 5, 655341, 131072, 5, 655342, 131072, 5, 655343, 131072, 5, 655344, 131072, 5, 655345, 131072, 5, 655346, 131072, 5, 655347, 131072, 5, 655348, 131072, 5, 655349, 131072, 5, 655350, 262144, 5, 720887, 196608, 5, 786423, 262144, 5, 786422, 131072, 5, 786421, 131072, 5, 786420, 131072, 5, 786419, 131072, 5, 786418, 131072, 5, 786417, 131072, 5, 786416, 131072, 5, 786415, 131072, 5, 786414, 131072, 5, 786413, 131072, 5, 786412, 131072, 5, 720876, 131072, 5, 720877, 131072, 5, 720878, 131072, 5, 720879, 131072, 5, 720880, 131072, 5, 720881, 131072, 5, 720882, 131072, 5, 720883, 131072, 5, 720884, 131072, 5, 720885, 131072, 5, 720886, 131072, 5, 720875, 131072, 5, 786411, 131072, 5, 786410, 131072, 5, 720874, 131072, 5, 655339, 131072, 5, 589803, 131072, 4, 589804, 131072, 4, 589805, 131072, 4, 589806, 131072, 4, 589807, 131072, 4, 589808, 131072, 4, 589809, 131072, 4, 589810, 131072, 4, 589811, 131072, 4, 589812, 131072, 4, 589813, 131072, 4, 589814, 196608, 4, 655351, 196608, 4, -524288, 65536, 6, -720904, 196608, 6, -720905, 131072, 6, -720906, 262144, 4, -720907, 131072, 5, -720908, 131072, 5, -720909, 131072, 5, -720910, 131072, 5, -720911, 327680, 4, -720912, 131072, 6, -720913, 131072, 6, -720914, 131072, 6, -720915, 131072, 6, -720916, 131072, 6, -720917, 131072, 6, -720918, 262144, 4, -655382, 196608, 5, -589846, 196608, 5, -524310, 196608, 5, -458774, 196608, 5, -393238, 196608, 5, -327702, 196608, 5, -262166, 196608, 5, -196630, 196608, 5, -131094, 196608, 5, -655370, 196608, 6, -655371, 131072, 6, -655372, 131072, 6, -655373, 131072, 6, -655374, 131072, 6, -655375, 65536, 6, -65558, 196608, 5, -22, 196608, 5, 65514, 196608, 5, 131050, 196608, 5, 196586, 196608, 5, 262122, 196608, 5, 327658, 196608, 5, 393194, 196608, 5, 458730, 196608, 5, 524266, 196608, 5, 589802, 262144, 5, 655338, 131072, 5, 786424, 131072, 4, 786425, 131072, 4, 786426, 131072, 4, 786427, 131072, 4, 786428, 131072, 4, 786429, 131072, 4, 786430, 131072, 4, 786431, 131072, 4, 720896, 131072, 4, 720897, 131072, 4, 720898, 131072, 4, 720899, 131072, 4, 720900, 131072, 4, 720901, 131072, 4, 720902, 131072, 4, 720903, 131072, 4, 720904, 131072, 4, 720905, 131072, 4, 655370, 65536, 4, 720906, 327680, 5, 655371, 131072, 4, 655372, 131072, 4, 655373, 131072, 4, 655374, 131072, 4, 655375, 131072, 4, 655376, 131072, 4, 655377, 131072, 4, 655378, 196608, 4, 720914, 262144, 5, 720915, 131072, 4, 720916, 131072, 4, 720917, 327680, 5, 720913, 131072, 5, 720912, 131072, 5, 720911, 131072, 5, 720910, 131072, 5, 720909, 131072, 5, 720908, 131072, 5, 720907, 131072, 5, -655339, 65536, 5, -589803, 65536, 5, -524267, 65536, 5, -458731, 65536, 5, -393195, 65536, 5, -327659, 65536, 5, -262123, 65536, 5, -196587, 65536, 5, -131051, 327680, 5, -131052, 65536, 4, -65516, 65536, 5, 20, 65536, 5, 65556, 65536, 5, -65515, 131072, 5, 21, 131072, 5, 65557, 131072, 5, 131092, 65536, 6, 131093, 131072, 6, 655381, 65536, 5, 589845, 65536, 5, 524309, 65536, 5, 458773, 65536, 5, 393237, 65536, 4)
layer_2/name = "ysort"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = true
layer_2/y_sort_origin = 0
layer_2/z_index = 1
layer_2/tile_data = PackedInt32Array(196590, 655362, 7, 655359, 655362, 7, 196619, 655362, 7, -196603, 2, 5, 196594, 2, 5, 327683, 393218, 7, -524302, 393218, 7, -262132, 393218, 7, -131055, 393218, 7, -393233, 2, 1, -196606, 2, 1, 524306, 2, 1, -720885, 2, 1, -589822, 2, 1, 720875, 2, 1, -524280, 2, 5, -720895, 524290, 6, -720892, 655362, 7, -393214, 655362, 7, -131082, 655362, 0, 393205, 327682, 0, -393229, 327682, 0, 458749, 524290, 6, 327694, 327682, 0, -589832, 2, 5, -458755, 655362, 7, -327684, 2, 0, 589833, 524290, 6, -196600, 655362, 7, 524307, 2, 5, -655349, 524290, 6, -655371, 524290, 6, -655373, 524290, 6, -720912, 524290, 6, 655377, 524290, 6, 655376, 524290, 6, 655372, 524290, 6, 720897, 524290, 6, 589812, 524290, 6, 589810, 524290, 6, 589807, 524290, 6, -786425, 524290, 6, 65531, 2, 5, 65550, 2, 5, -17, 2, 5, -851950, 524290, 6, -851954, 524290, 6, -786411, 524290, 6, -655341, 524290, 6, 720878, 524290, 6, 458732, 524290, 6, 262123, 524290, 6, 851964, 524290, 6, 720889, 524290, 6, 720917, 524290, 6)

[node name="player" parent="." instance=ExtResource("4_v1e4b")]
position = Vector2(-304, -104)

[node name="enemy" parent="." instance=ExtResource("5_sfi6o")]
position = Vector2(-267, 57)

[node name="enemy2" parent="." instance=ExtResource("5_sfi6o")]
position = Vector2(-271, 94)

[node name="enemy3" parent="." instance=ExtResource("5_sfi6o")]
position = Vector2(-83, 15)

[node name="enemy4" parent="." instance=ExtResource("5_sfi6o")]
position = Vector2(-254, 83)

[node name="collisons" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisons"]
polygon = PackedVector2Array(-352, -187, -337, -178, -337, -174, -337, 127, -336, 131, -328, 131, -151, 130, -149, 133, -144, 145, -139, 146, -135, 147, -133, 149, -130, 157, -129, 168, -128, 177, -128, 179, 163, 178, 163, 172, 168, 165, 169, 164, 175, 163, 288, 163, 289, 162, 292, 162, 297, 163, 299, 165, 305, 179, 337.959, 179, 338, 120, 339, 109, 343, 102, 345, 100, 352, 99, 352, 91, 378, 91, 378, 52, 352, 52, 352, 47, 328, 47, 322, 42, 322, -6, 323, -19, 328, -28, 338, -30, 338, -162, 207, -161, 207, -148, 204, -146, 200, -145, 79, -145, 79, -131, 71, -129, 71, -129, 63, -129, 63, -115, 56, -113, 6, -113, 3, -118, 2, -132, 2, -146, -8, -145, -40, -145, -46, -149, -52, -192, -52, -256, -109, -256, -109, -192, -113, -192, -113, -177, -141, -177, -145, -178, -145, -165, -146, -163, -149, -161, -232, -161, -235, -163, -237, -166, -237, -177, -333, -177, -337, -178, -350, -191, -352, -192, -357, -197, -271, -315, 268, -324, 416, -197, 432, -85, 413, 147, 398, 250, 270, 273, -29, 272, -292, 275, -448, 162, -424, -18, -397, -231, -361, -200)

[node name="cliffside_enter_point" type="Area2D" parent="."]
script = SubResource("GDScript_2e00v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="cliffside_enter_point"]
position = Vector2(-80.5, -224)
shape = SubResource("RectangleShape2D_jfl2n")

[node name="world2_enter_point" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="world2_enter_point"]
position = Vector2(365, 71.5)
shape = SubResource("RectangleShape2D_eo2fy")

[node name="structures_tilemap" type="TileMap" parent="."]
z_index = -1
y_sort_enabled = true
scale = Vector2(0.4, 0.4)
tile_set = ExtResource("5_1fnhg")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(-1769489, 589830, 4, -1703953, 589830, 5, -1638417, 589830, 6, -1572881, 589830, 7, -1769488, 655366, 4, -1703952, 655366, 5, -1638416, 655366, 6, -1572880, 655366, 7, -1769487, 720902, 4, -1703951, 720902, 5, -1638415, 720902, 6, -1572879, 720902, 7, -1966090, 327686, 4, -1900554, 327686, 5, -1835018, 327686, 6, -1769482, 327686, 7, -1966089, 393222, 4, -1900553, 393222, 5, -1835017, 393222, 6, -1769481, 393222, 7, -1900552, 458758, 5, -1835016, 458758, 6, -1769480, 458758, 7)
layer_1/name = "ysort"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(-1572912, 0, 1, 131098, 4, 4, 917486, 4, 4, -262171, 65545, 1, -786440, 65545, 1, -1310764, 65545, 1, 524242, 65545, 1, 1114158, 65545, 1, 589845, 65545, 1, 131121, 65545, 1, 65583, 65545, 1, 131118, 65545, 1, 51, 65545, 1)

[node name="enemy5" parent="." instance=ExtResource("6_t420j")]
position = Vector2(-71, 1)

[node name="enemy6" parent="." instance=ExtResource("6_t420j")]
position = Vector2(232, 24)

[node name="enemy7" parent="." instance=ExtResource("6_t420j")]
position = Vector2(318, 127)

[node name="enemy8" parent="." instance=ExtResource("6_t420j")]
position = Vector2(-277, 71)

[node name="enemy9" parent="." instance=ExtResource("6_t420j")]
position = Vector2(135, -125)

[node name="enemy10" parent="." instance=ExtResource("6_t420j")]
position = Vector2(90, -45)

[node name="enemy11" parent="." instance=ExtResource("6_t420j")]
position = Vector2(-79, -132)

[connection signal="body_entered" from="cliffside_enter_point" to="." method="_on_cliffside_enter_point_body_entered"]
[connection signal="body_exited" from="cliffside_enter_point" to="." method="_on_cliffside_enter_point_body_exited"]
[connection signal="body_entered" from="world2_enter_point" to="." method="_on_world_2_enter_point_body_entered"]
[connection signal="body_exited" from="world2_enter_point" to="." method="_on_world_2_enter_point_body_exited"]
